--- a/finapp/package.json
+++ b/finapp/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^17.0.15",
     "amazon-cognito-identity-js": "^5.2.8",
     "axios": "^0.26.1",
+    "axios-middleware": "^0.3.1",
     "luxon": "^2.3.1",
     "material-table": "^2.0.3",
     "plotly.js": "^2.11.1",
